[gd_scene load_steps=13 format=3 uid="uid://br4e21jc0gv8o"]

[ext_resource type="Script" uid="uid://bkauup2it2tfp" path="res://scripts/singletons/game/playGame.gd" id="1_abwwd"]
[ext_resource type="PackedScene" uid="uid://2hd65vn44me7" path="res://scenes/world.tscn" id="2_abwwd"]
[ext_resource type="Script" uid="uid://q0u3f7fb1u41" path="res://scripts/nodes/aspectRatioContainer.gd" id="2_rt4fk"]
[ext_resource type="Shader" uid="uid://donorxvv474n1" path="res://resources/materials/playGame.gdshader" id="3_wfiui"]
[ext_resource type="Theme" uid="uid://bvfthh0vm4fbp" path="res://resources/uiTheme.tres" id="5_n2d1d"]
[ext_resource type="PackedScene" uid="uid://ccqphk3fjcl1e" path="res://scenes/mouseover.tscn" id="5_y4ge2"]
[ext_resource type="PackedScene" uid="uid://cudl265jx2hk6" path="res://scenes/gameSettings.tscn" id="6_m88lo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abwwd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2d1d"]
shader = ExtResource("3_wfiui")
shader_parameter/pauseAnimTimer = 0.0
shader_parameter/darken = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4ge2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfiui"]
bg_color = Color(0.15727392, 0.15727398, 0.15727389, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_m88lo"]

[node name="playGame" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_abwwd")
script = ExtResource("1_abwwd")

[node name="aspectRatioContainer" type="Container" parent="."]
layout_mode = 2
script = ExtResource("2_rt4fk")
metadata/_custom_type_script = "uid://q0u3f7fb1u41"

[node name="gameViewportCont" type="SubViewportContainer" parent="aspectRatioContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_n2d1d")
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
stretch = true

[node name="gameViewport" type="SubViewport" parent="aspectRatioContainer/gameViewportCont"]
unique_name_in_owner = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(820, 623)
size_2d_override = Vector2i(800, 608)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="aspectRatioContainer/gameViewportCont/gameViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y4ge2")

[node name="worldViewportCont" type="SubViewportContainer" parent="aspectRatioContainer/gameViewportCont/gameViewport"]
unique_name_in_owner = true
offset_right = 800.0
offset_bottom = 608.0

[node name="worldViewport" type="SubViewport" parent="aspectRatioContainer/gameViewportCont/gameViewport/worldViewportCont"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(800, 608)
render_target_update_mode = 4

[node name="world" parent="aspectRatioContainer/gameViewportCont/gameViewport/worldViewportCont/worldViewport" instance=ExtResource("2_abwwd")]
unique_name_in_owner = true

[node name="playCamera" type="Camera2D" parent="aspectRatioContainer/gameViewportCont/gameViewport/worldViewportCont/worldViewport/world"]
unique_name_in_owner = true
limit_left = 0
limit_top = 0
limit_right = 800
limit_bottom = 608
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="mouseover" parent="aspectRatioContainer/gameViewportCont/gameViewport" instance=ExtResource("5_y4ge2")]
unique_name_in_owner = true

[node name="drawParent" type="Node2D" parent="aspectRatioContainer/gameViewportCont/gameViewport"]
unique_name_in_owner = true

[node name="pauseMenu" type="Panel" parent="aspectRatioContainer/gameViewportCont/gameViewport"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_n2d1d")
theme_override_styles/panel = SubResource("StyleBoxFlat_wfiui")

[node name="gameSettings" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu" instance=ExtResource("6_m88lo")]
unique_name_in_owner = true
layout_mode = 1
toneButtonGroup = SubResource("ButtonGroup_m88lo")

[node name="main" type="MarginContainer" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -92.5
offset_bottom = 92.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 49

[node name="c" type="VBoxContainer" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main"]
custom_minimum_size = Vector2(301, 0)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="resume" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Resume"

[node name="edit" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Edit Level"

[node name="quit" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Quit Game (Instantly)"

[node name="erasePencilmarks" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c"]
visible = false
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Erase Pencilmarks"

[node name="mouseBlocker" type="Control" parent="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu"]
unique_name_in_owner = true
anchors_preset = 0
mouse_filter = 2

[node name="winMenu" type="Control" parent="aspectRatioContainer/gameViewportCont/gameViewport"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_n2d1d")

[node name="c" type="HBoxContainer" parent="aspectRatioContainer/gameViewportCont/gameViewport/winMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 1

[node name="restart" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Restart (R)"

[node name="edit" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Edit Level"

[node name="quit" type="Button" parent="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"RadioButtonText"
theme_override_font_sizes/font_size = 16
text = "Quit Game (Instantly)"

[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c/resume" to="." method="pause"]
[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c/edit" to="." method="editLevel"]
[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/pauseMenu/main/c/quit" to="." method="quit"]
[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c/restart" to="." method="restart"]
[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c/edit" to="." method="editLevel"]
[connection signal="pressed" from="aspectRatioContainer/gameViewportCont/gameViewport/winMenu/c/quit" to="." method="quit"]
